# devco

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py  test_user_file.txt
.devco/: config.json  devco.db  principles.json  summary.json
.devdoc/: devdoc.db  principles.json  summary.json
devdoc/: __init__.py  cli.py  embeddings.py  principles.py  sections.py  storage.py  summary.py
tests/: test_cli.py  test_embeddings.py  test_principles.py  test_sections.py  test_storage.py  test_summary.py
